crates/wdl-engine/tests/tasks/retry/error.txt
error: task execution failed for task `test`: process terminated with non-zero exit code 1
  ┌─ tests/tasks/retry/source.wdl:5:6
  │
5 │ task test {
  │      ^^^^ this task failed to execute

